--- a/index.html
+++ b/index.html
@@ -3,66 +3,65 @@
 <!--[if IE 7]>    <html class="ie lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>    <html class="ie lt-ie9"> <![endif]-->
 <!--[if gt IE 8]> <html> <![endif]-->
-<!--[if !IE]><!-->
-<html lang="en"><!-- <![endif]-->
-
+<!--[if !IE]><!--><html lang="en"><!-- <![endif]-->
 <head>
-	<title>Happy Birthday Amu</title>
+	<title>Happy Birthday</title>
 	<meta charset="UTF-8" />
-	<meta property="og:type" content="E-Greeting" />
-	<!-- <meta property="og:image" href="images/others/favicon.ico" /> -->
-	<link rel="icon" href="images/others/favicon.ico" type="image/x-icon" />
-	<meta property="og:description" content="Wish you a very Happy Birthday">
-	<meta name="viewport"
-		content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
+	<meta name="description" content="Happy Birthday Xola">
+	<meta name="robots" content="index, follow" />
+	<link rel="author" href="https://plus.google.com/u/1/+AyushSharma1/" /> 
+    <meta name="keywords" content="Birthday, Happy">
+    <!-- Strat of Facebook Meta -->
+    <meta property="og:type" content="E-Greeting" />
+    <meta property="og:image" content="favicon.ico" />
+    <meta property="og:description" content="Wish you a very Happy Birthday">
+    <!-- End of Facebook Meta Tags -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="src/css/stylesheet.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/balloon-css/0.5.0/balloon.min.css">
-	<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
-	<link href='https://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="loading.css">
+	<link href='http://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
+	<!-- <link href='http://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'> -->
+	<link rel="stylesheet/less" href="cake.less">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
 </head>
 
-<body id="bodyy">
+<body>
+	<div class="loading"></div>
 	<audio class="song" controls loop>
-		<source src="audio/hbd1.mp3">
-		</source>
-		Your browser isn't invited for super fun audio time.
-	</audio>
+        <source src="hbd.mp3"></source>
+	   Your browser isn't invited for super fun audio time.
+    </audio>
+    <div class="balloons text-center" id="b1">
+    	<h2 style="color:#F2B300;">H</h2>
+    </div>
+    <div class="balloons text-center" id="b2">
+    	<h2 style="color:#0719D4;">B</h2>
+    </div>
+	<div class="balloons text-center" id="b3">
+    	<h2 style="color:#D14D39;">D</h2>
+    </div>
+	<div class="balloons text-center" id="b4">
+    	<h2 style="color:#8FAD00;">X</h2>
+    </div>
+	<div class="balloons text-center" id="b5">
+    	<h2 style="color:#8377E4;">O</h2>
+    </div>
+    <div class="balloons text-center" id="b6">
+    	<h2 style="color:#99C96A;">L</h2>
+    </div>
+    <div class="balloons text-center" id="b7">
+    	<h2 style="color:#20CFB4;">A</h2>
+    </div>
 
-	<div class="balloons col-xs-2 text-center" id="b1">
-		<h3 style="color:#F2B300;">A</h3>
-	</div>
-	<div class="balloons col-xs-2 text-center" id="b2">
-		<h3 style="color:#0719D4;">M</h3>
-	</div>
-	<div class="balloons col-xs-2 text-center" id="b3">
-		<h3 style="color:#D14D39;">I</h3>
-	</div>
-	<div class="balloons col-xs-2 text-center" id="b4">
-		<h3 style="color:#8FAD00;">S</h3>
-	</div>
-	<div class="balloons col-xs-2 text-center" id="b5">
-		<h3 style="color:#8377E4;">H</h3>
-	</div>
-	<div class="balloons col-xs-2 text-center" id="b6">
-		<h3 style="color:#99C96A;">A</h3>
-	</div>
-
-	<img src="images/ballons/Balloon-Border.png" width="100%" class="balloon-border">
-	<img src="images/others/tenor.gif" id="welcome_dance" alt="dancing step" class="center1" width=250 />
-
-
-	<img src="images/others/cake.png" width="100%" class="cake_class" id="cake_pink">
-
+    <img src="Balloon-Border.png" width="100%" class="balloon-border">
+ 
 
 	<div class="container">
-
+		
 		<div class="row">
 			<div class="col-md-2 col-xs-2 bulb-holder">
 				<div class="bulb" id="bulb_yellow"></div>
@@ -85,71 +84,115 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12 text-center">
-				<img src="images/ballons/banner.png" class="bannar" id="banner">
+				<img src="banner.png" class="bannar">
 			</div>
 		</div>
-
-
-
+		<div class="row cake-cover">
+			<div class="col-md-12 texr-center">
+				<div class="cake">
+				  <div class="velas">
+				    <div class="fuego"></div>
+				    <div class="fuego"></div>
+				    <div class="fuego"></div>
+				    <div class="fuego"></div>
+				    <div class="fuego"></div>
+				  </div>
+				  <div class="cobertura"></div>
+				  <div class="bizcocho"></div>
+				</div>
+			</div>
+		</div>
+		<div class="row message">
+			<div class="col-md-12">
+				<p>Today is...</p>
+				<p>as beautiful as other days</p>
+				<p>but you realize</p>
+				<p>another year has gone</p>
+				<p>in a blink of the eyes</p>
+				<p><strong>however</strong></p>
+				<p>Do you know..?</p>
+				<p>today is just special</p>
+				<p>so special to you</p>
+				<p>that's why</p>
+				<p>Let's make it...</p>
+				<p>the best celebration ever</p>
+				<p>and let me share...</p>
+				<p>a piece of happiness to you</p>
+				<p>I made all this...</p>
+				<p>as a birthday present to you</p>
+				<p>thanks for being there</p>
+				<p>thanks for the friendship we made</p>
+				<p>thanks for everything</p>
+				<p>I wish you all the best</p>
+				<p>May your life be at ease</p>
+				<p>May all your wishes come true</p>
+				<p>Remember</p>
+				<p>your ambitions</p>
+				<p>you live as a free bird...</p>
+				<p>flying in the blue sky</p>
+				<p>Now things are different...</p>
+				<p>real story of your life</p>
+				<p>is just about to begin</p>
+				<p>indeed..</p>
+				<p>but...</p>
+				<p>don't worry</p>
+				<p>because...</p>
+				<p>God has your back</p>
+				<p>and</p>
+				<p>this year will be better</p>
+				<p>and I hope</p>
+				<p>you'll find...</p>
+				<p>happiness along the way</p>
+				<p>keep your spirit up</p>
+				<p>enjoy every single moment...</p>
+				<p>that you experience today</p>
+				<p>fill it with your most beautiful smile</p>
+				<p>and make it the best memory..</p>
+				<p>lastly...</p>
+				<p>I'd like to wish you one more time</p>
+				<p>a very happy birthday Xola Mathembisa</p>
+			</div>
+		</div>
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="button-85" id="initial">Welcome Amu</button>
-					<button class="button-85" id="turn_on">Turn On The Lights</button>
-					<button class="button-85" id="play">Play Music</button>
-					<button class="button-85" id="bannar_coming">Let's Decorate</button>
-					<button class="button-85" id="balloons_flying">Fly With Balloons</button>
-					<button class="button-85" id="cake_fadein">Most Delicious Cake Ever</button>
-					<button class="button-85" id="story" data-toggle="modal" data-target="#myModal">A mesage for
-						you</button>
-
+					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
+					<button class="btn btn-primary" id="play">Play Music</button>
+					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
+					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
+					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
+					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
+					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
+					<button class="btn btn-primary" id="story">A mesage for you</button>
+					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
-
+			<!-- <div class="col-md-2">
+			</div>
+			<div class="col-md-2">
+			</div>
+			<div class="col-md-2">
+			</div>
+			<div class="col-md-2">
+			</div>
+			<div class="col-md-2">
+			</div> -->
 		</div>
 
 
 	</div>
-
-
-	<!-- Modal -->
-	<div id="myModal" class="modal fade" role="dialog" style="z-index: 99999999999999999;">
-		<div class="modal-dialog">
-
-			<!-- Modal content-->
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal">&times;</button>
-					<h4 class="modal-title text-center bday">Happy B'day Amu</h4>
-				</div>
-				<div class="modal-body" style="font-weight: 500;">
-					<p>
-					<p> Hey Amu, Today is a very special and beautiful day . So let's
-						make
-						it the best together. &nbsp;<i class="em-svg em-blush"></i></p>
-					<p> Happiest Birthday mera bacha ❤️. I made all this as a birthday present
-						to
-						you. I wish the best for you be happy always. May God bless you and fullfill
-						all of your dreams. 
-						Enjoy every single moment that you experience today, fill it with your most beautiful smile
-						and make it the best memory. </p>
-					<p class="signed"><u> </b>I'll always be with you<b> <i class="em-svg em-heart"></i>
-					</p>
-					</p>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-				</div>
-			</div>
-
-		</div>
-	</div>
-
-
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-<script src="src/scripts/index.js"></script>
-<script src="src/scripts/effect.js"></script>
+<script src="effect.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-58229732-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </html>
