--- a/index.html
+++ b/index.html
@@ -93,53 +93,42 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Today is...</p>
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
-				<p>another year has gone</p>
-				<p>in a blink of the eyes</p>
-				<p><strong>however</strong></p>
-				<p>Do you know..?</p>
-				<p>today is just special</p>
-				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
-				<p>and let me share...</p>
-				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>thanks for being there</p>
-				<p>thanks for the friendship we made</p>
-				<p>thanks for everything</p>
-				<p>I wish you all the best</p>
-				<p>May your life be at ease</p>
-				<p>May all your wishes come true</p>
-				<p>Remember</p>
-				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
-				<p>flying in the blue sky</p>
-				<p>Now things are different...</p>
-				<p>real story of your life</p>
-				<p>is just about to begin</p>
-				<p>indeed..</p>
-				<p>but...</p>
-				<p>don't worry</p>
-				<p>because...</p>
-				<p>God has your back</p>
-				<p>and</p>
-				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
-				<p>keep your spirit up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
-				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
-				<p>lastly...</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Xola Mathembisa</p>
+				<p>Aaj ka din...</p>
+<p>waise hi khoobsurat hai jaise har din hota hai</p>
+<p>par aaj kuch special hai</p>
+<p>aaj ka din khaas hai</p>
+<p>bahut khaas hai mere liye</p>
+<p>isliye</p>
+<p>chalo is din ko...</p>
+<p>sabse acchi celebration banate hain</p>
+<p>aur main tumse...</p>
+<p>khushi ka ek tukda share karna chahta hoon</p>
+<p>ye sab maine...</p>
+<p>as a birthday gift tumhare liye banaya hai</p>
+<p>Happy Birthday mera bacha</p>
+<p>God bless you</p>
+<p>and</p>
+<p>fulfill all your dreams</p>
+<p>tumhari zindagi haseen ho</p>
+<p>tumhare saare sapne sach ho</p>
+<p>par yaad rakhna</p>
+<p>sirf mere sath</p>
+<p>Be succesfull in your life</p>
+<p>aur...</p>
+<p>kisi bhi baat ki chinta mat karna</p>
+<p>kyunki...</p>
+<p>bhagwan ne mujhe tumhare liye hi toh bheja hai</p>
+<p>aur</p>
+<p>ye saal aur bhi behtar hoga</p>
+<p>and I hope ki</p>
+<p>tumhe sirf...</p>
+<p>khushiyan milengi</p>
+<p>me kehna toh aur bhi bahut kuch chahta tha</p>
+<p>par am not too good at expressing my feelings</p>
+<p>so.........</p>
+<p>I wish you again</p>
+<p>ek bahut khushiyon se bhara hua janamdin, Happy birthday Amu</p>
+<p>Love You💖</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
