--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--[if !IE]><!--><html lang="en"><!-- <![endif]-->
 <head>
-	<title>Happy Birthday</title>
+	<title>Happy Birthday Amu💖</title>
 	<meta charset="UTF-8" />
 	<meta name="description" content="Happy Birthday Amu">
 	<meta name="robots" content="index, follow" />
